--- a/package.json
+++ b/package.json
@@ -25,8 +25,10 @@
     "@nestjs/config": "^3.3.0",
     "@nestjs/core": "^10.0.0",
     "@nestjs/platform-express": "^10.4.15",
+    "@nestjs/platform-socket.io": "^10.4.15",
     "@nestjs/serve-static": "^4.0.2",
     "@nestjs/swagger": "^7.4.2",
+    "@nestjs/websockets": "^10.4.15",
     "@prisma/client": "^5.21.1",
     "bcrypt": "^5.1.1",
     "handlebars": "^4.7.8",
@@ -34,6 +36,7 @@
     "nodemailer": "^6.9.16",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1",
+    "socket.io": "^4.8.1",
     "uuid": "^10.0.0",
     "zod": "^3.23.8"
   },
